<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/widget54"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="horizontal">

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:minHeight="80px">
		<ImageView android:id="@+id/thumbnail" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/isbn" />
		<EditText android:id="@+id/isbn" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/load" android:text="@string/load" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:clickable="true" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title" />
		<EditText android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vote" />
		<Spinner android:id="@+id/vote" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:choiceMode="singleChoice" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comments" />
		<EditText android:id="@+id/comments" android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:scrollbars="vertical" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<!--
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read" />
		-->
		<CheckBox android:text="@string/read" android:id="@+id/read" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></CheckBox>
		<CheckBox android:text="@string/owned" android:id="@+id/owned" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></CheckBox>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/author" />
		<EditText android:id="@+id/author" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/publisher" />
		<EditText android:id="@+id/publisher" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date" />
		<EditText android:id="@+id/date" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pages" />
		<EditText android:id="@+id/pages" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>

</LinearLayout>
</ScrollView>