<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:stretchColumns="1">
		
		<TableRow>
			<ImageView 
				android:id="@+id/thumbnail" 
				android:layout_height="wrap_content"
				android:src="@drawable/no_cover_thumb"
				android:gravity="right"
				android:padding="3dip" />
				
			<LinearLayout 
				android:orientation="horizontal" 
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent" 
				android:padding="3dip"
				android:gravity="bottom">
				
				<EditText 
					android:id="@+id/isbn" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_weight="1" 
					android:scrollHorizontally="true" />
				
				<Button 
					android:id="@+id/load" 
					android:text="@string/load" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:clickable="true" />
			</LinearLayout>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/title"
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip" />
			
			<EditText 
				android:id="@+id/title" 
				android:padding="3dip"
				android:scrollHorizontally="true" 
				android:text="aslfjsjf fdskfjsd fksdjfjs fjsdhfuwewf ewjhfwehf dsjhfjdshf sjfskfowef kjfjo"/>
		</TableRow>

		<TableRow>
			<TextView 
				android:text="@string/vote" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip" />
				
			<LinearLayout 
				android:orientation="horizontal" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:gravity="bottom">
		    	<RatingBar android:id="@+id/rating"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:numStars="4"
		        	android:stepSize="0.5" />
	        </LinearLayout>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/comments" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
			
			<EditText 
				android:id="@+id/comments" 
				android:lines="4"
				android:padding="3dip"
				android:scrollHorizontally="true"
				android:scrollbars="vertical" android:text="aslfjsjf fdskfjsd fksdjfjs fjsdhfuwewf ewjhfwehf dsjhfjdshf sjfskfowef kjfjo" />
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
				
			<LinearLayout 
				android:orientation="horizontal" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:padding="3dip">
				
				<CheckBox 
					android:text="@string/read" 
					android:id="@+id/read" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				
				<CheckBox 
					android:text="@string/owned" 
					android:id="@+id/owned" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/author" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
			<EditText 
				android:id="@+id/author"
				android:padding="3dip"
				android:scrollHorizontally="true"
				android:scrollbars="vertical" />
		</TableRow>

		<TableRow>
			<TextView 
				android:text="@string/publisher" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
			<EditText 
				android:id="@+id/publisher"
				android:padding="3dip"
				android:scrollHorizontally="true"
				android:scrollbars="vertical" />
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/date" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
			<EditText 
				android:id="@+id/date"
				android:padding="3dip"
				android:scrollHorizontally="true"
				android:scrollbars="vertical" />
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/pages" 
				android:textStyle="bold" 
				android:gravity="right"
				android:padding="3dip"/>
			<EditText 
				android:id="@+id/pages"
				android:padding="3dip"
				android:scrollHorizontally="true"
				android:scrollbars="vertical" />
		</TableRow>

		<TableRow android:gravity="right">

			<Button android:id="@+id/cancel" android:text="Cancel" />

			<Button android:id="@+id/save" android:text="Save" />
		</TableRow>		
	</TableLayout>
</ScrollView>